--- a/html/form.html
+++ b/html/form.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -13,19 +13,19 @@
 				 <img src="../acess/" alt="Logo burguer rush">
 			</div>>-->
 
-			<ul class="menu-principal">
+			<!-- <ul class="menu-principal">
                 <li><a href="#"> <img src="../acess/botao-de-inicio.png" id="icone"><a href="../html/index.html">Home</a></li>
 				<li><a href="#"> <img src="../acess/aperto-de-mao.png" id="icone">Sobre</a> </li>
 				<li><a href="#"> <img src="../acess/escrita.png" id="icone">Cardápio</a></li>
 				<li> <a href="#"> <img src="../acess/usuario-de-perfil.png" id="icone"><a href="../html/form.html" target="_blank" rel="noopener noreferrer">Login</a></li>
 			</ul>
-		</nav>
+		</nav> -->
 		<!-- <aside>
 			<div class="menu-toogle">
 				<img src="../acess/menu-hamburguer.png" alt="menu-hamburguer">
 			</div>
 		</aside> -->
-	</header>
+	<!-- </header>
     <section>
         <div>
             <form action="" method="post">
@@ -52,4 +52,4 @@
     </section>
     <footer></footer>
 </body>
-</html>
+</html> --> 
