--- a/html/login.html
+++ b/html/login.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/login.css">
 	<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="../js/municipios.js"></script>
+	<!-- <script type="text/javascript" src="../js/municipios.js"></script> -->
+	<script src="../js/cidadesPorEstado.js"></script>
 
 </head>
 <body>
@@ -29,10 +30,10 @@
 			<span></span>
 			<input type="hidden" name="acao" value="cadastrar">
 		    <input type="text" placeholder="Digite seu nome" required id="nome" name="nome">
-			<input type="text" name="cpf" \ pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" \ id="cpf" placeholder="Digite seu cpf">
+			<input type="text" name="cpf" \ pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" \ id="cpf" placeholder="Digite seu cpf" maxlength="14">
 			<input type="email" placeholder="Digite seu e-mail" required id="e-mail" name="email">
-			<input type="text" name="telefone" id="telefone" required id="telefone" placeholder="Digite seu telefone">
-			<select id="estado" onchange="buscarCidades(this.value)" name="estado">
+			<input type="text" name="telefone" id="telefone" required id="telefone" placeholder="Digite seu telefone" maxlength="">
+			<select id="estado"  name="estado"> <!--onchange="buscarCidades(this.value)" -->
 				<option value="">Selecione o Estado</option>
 				<option value="AC">Acre</option>	
 				<option value="AL">Alagoas</option>
@@ -63,7 +64,6 @@
 			 </select>
 			 <br/>
 			 <select name ='cidade'id="cidade">
-				<option value="ma">massapê</option>
 			 </select>
 			 <input type="text" placeholder="Digite seu Bairro" required id="bairro" name="Bairro">
 			 <input type="text" placeholder="Digite seu CEP" required id="cep" name="cep">
